ifcb/static/dashboard.css
html {
    height: 100%;
    font-family: sans-serif;
    font-size: small;
}
#content {
    position: relative;
    min-height: 100%;
}
body {
    height: 100%;
}
.bin_label {
    font-family: sans-serif;
    font-size: small;
    margin-top: 0px;
}
.ui-button-text {
    font-size: small !important;
}
.tbl {
    padding-left: 4px;
    padding-right: 4px;
    font-family: monospace;
}
.tbl_even {
    background: #aaaaaa;
}
.metadata_key {
    font-style: italic;
}
.metadata_value {
}
.pre_footer {
    clear: both;
    height: 115px;
}
.footer {
  position: relative;
  margin-top: -115px;
  text-align: center;
  font-family: sans-serif;
  font-size: 15px;
  padding-top: 15px;
  margin-right: auto;
  margin-left: auto;
}
img.logo {
  height: 50px;
  padding: 5px;
}
#mosaic_pager {
  float: left;
  margin-left: 0px;
  margin-top: 15px;
  font-size: 10px;
}
.mosaic_controls {
  text-align: center;
  margin-bottom: 5px;
  white-space: nowrap;
}
#roi_image {
  float: right;
  text-align: right;
  margin-right: 0px;
  margin-top: 15px;
}
#date_label {
  font-weight: bold;
  width: 13em;
  text-align: center;
  margin-top: 5px;
}
#timeline {
    margin-top: 0px;
}
.target_image {
}
.target_image_text {
    clear: both;
    padding-top: 5px;
    margin-bottom: 0px;
    padding-bottom: 0px;
}
.major {
  -moz-border-radius: 7px;
  border-radius: 7px;
  background: #dddddd;
  padding: 7px;
  box-shadow: 0px 0px 5px #777777;
}
.inline {
  margin-top: 15px;
  margin-bottom: 15px;
  display: inline-block;
}
div.h1 {
    margin-top: 5px;
    margin-bottom: 10px;
    padding: 15px;
    font-size: 2em;
    font-weight: bold;
}
div.h2 {
    margin-top: 0px;
    margin-bottom: 0px;
    text-align: center;
    padding: 0px;
    font-size: 1.2em;
    font-weight: bold;
}
.ui-button-text {
 font-size: inherit !important;
}
.close {
    display: block;
    float: right;
    width: 30px;
    height: 30px;
    font-family: sans-serif;
    font-size: 15px;
    font-weight: bold;
    text-align: right;
    color: #888888;
/*    background: #444444;*/
}
.close:before {
    content: '\000d7';
}

